# ai-liquidity-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
executors/meteora_ts/: README.md  dlmm_executor.mjs  package-lock.json  package.json
scripts/: analyze_trade_journal.py  handoff_local_to_vps.sh  handoff_vps_to_local.sh  run_local_live.sh
src/ai_liquidity_optimizer/: __init__.py  __main__.py  cli.py  compat.py  config.py  http.py  models.py  orchestrator.py  state_store.py
src/ai_liquidity_optimizer/clients/: meteora.py  synth.py
src/ai_liquidity_optimizer/execution/: base.py  dry_run.py  meteora_node_bridge.py
src/ai_liquidity_optimizer/strategy/: bin_weights.py  ev.py  realism.py  scoring.py  synth_market.py
tests/: test_bin_weights.py  test_config.py  test_ev_scoring.py  test_meteora_bridge.py  test_meteora_client_fallback.py  test_orchestrator_hold_ev.py  test_orchestrator_lifecycle_policy.py  test_orchestrator_pool_fallback.py  test_realism.py  test_scoring.py  test_synth_client.py  test_synth_market.py  test_trade_journal.py
