[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-liquidity-optimizer"
version = "0.1.0"
description = "Hackathon MVP: Synth forecast-driven range selection for a Meteora DLMM SOL/USDC LP position"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hackathon MVP" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

